samples/_failures_safe/1761504992_121999_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a59edb38.c: In function ‘main’:
./samples/SAFE/__tmp_a59edb38.c:149:5: error: expected ‘,’ or ‘;’ at end of input
  149 |     for (size_t i = 0
      |     ^~~
./samples/SAFE/__tmp_a59edb38.c:149:5: error: expected declaration or statement at end of input
